--- a/styles.css
+++ b/styles.css
@@ -7,16 +7,18 @@
 
 .main-page {
   display: flex;
-  padding: 20%;
 }
 
 .page-left {
   color: white;
+  width: 50%;
+  padding: 15%;
 }
 .page-right {
   display: flex;
   flex-direction: column;
-  padding-left: 5%;
+  width: 50%;
+  padding: 7.5%;
 }
 
 .page-header {
@@ -25,17 +27,34 @@
   text-align: center;
 }
 
-.form-section {
-  background-color: white;
+input[type='text'] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
 }
 
-form {
-  display: flex;
-  flex-direction: column;
+input[type='submit'] {
+  width: 100%;
+  background-color: #4caf50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
-input {
+input[type='submit']:hover {
+  background-color: #45a049;
 }
 
-button{
+div .forn-section {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+  width: 100%;
 }
