--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@
   background-color: rgb(103, 69, 189);
   color: white;
   text-align: center;
-  width: 90%;
+  width: 100%;
   padding: 14px 20px;
   margin: 8px 0;
   border: none;
@@ -35,6 +35,16 @@
 
 .page-header :hover {
   background-color: rgb(89, 57, 170);
+}
+
+div .forn-section {
+}
+
+form {
+  width: 100%;
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
 }
 
 input[type='text'] {
@@ -60,11 +70,4 @@ input[type='submit'] {
 
 input[type='submit']:hover {
   background-color: #45a049;
-}
-
-div .forn-section {
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  /* padding: 20px; */
-  width: 100%;
 }
