--- a/styles.css
+++ b/styles.css
@@ -7,18 +7,19 @@
 
 .main-page {
   display: flex;
+  padding: 3%;
 }
 
 .page-left {
   color: white;
   width: 50%;
-  padding: 15%;
+  padding: 15% 10%;
 }
 .page-right {
   display: flex;
   flex-direction: column;
   width: 50%;
-  padding: 7.5%;
+  padding: 7.5% 12% 7.5% 7.5%;
 }
 
 .page-header {
@@ -27,7 +28,7 @@
   text-align: center;
   width: 100%;
   padding: 14px 20px;
-  margin: 8px 0;
+  margin: 20px 0;
   border: none;
   border-radius: 4px;
   cursor: pointer;
@@ -57,6 +58,10 @@ input[type='text'] {
   box-sizing: border-box;
 }
 
+input:focus-within {
+  outline: 1px auto rgb(218, 116, 116);
+}
+
 input[type='submit'] {
   width: 100%;
   background-color: #4caf50;
@@ -70,4 +75,8 @@ input[type='submit'] {
 
 input[type='submit']:hover {
   background-color: #45a049;
+}
+
+input:focus-within {
+  outline: 1px auto rgb(218, 116, 116);
 }
