--- a/styles.css
+++ b/styles.css
@@ -1,55 +1,152 @@
-.page-container {
-  background-color: rgb(218, 116, 116);
-  margin: 0;
+/* * {
   padding: 0;
+  margin: 0;
   box-sizing: border-box;
+  font-family: sans-serif;
+}
+
+.page-container {
+  background: url(./images/bg-intro-desktop.png) no-repeat, rgb(218, 116, 116);
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  color: white;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 1rem;
 }
 
 .main-page {
-  display: flex;
-  padding: 1%;
+  margin: 4rem 1.5rem 0 1.5rem;
 }
 
-.page-left {
-  color: white;
-  width: 50%;
-  padding: 15% 10%;
+.page-left h1 {
+  font-size: 1.8rem;
+  line-height: 1.3;
+  margin-bottom: 1.5rem;
 }
-.page-right {
-  display: flex;
-  flex-direction: column;
-  width: 50%;
-  padding: 7.5% 10% 7.5% 7.5%;
+.page-left p {
+  margin: 1rem 0;
 }
 
 .page-header {
-  background-color: rgb(103, 69, 189);
-  color: white;
+  margin: 2rem 0;
+  padding: 1rem 3rem;
+  background: rgb(89, 57, 170);
+  box-shadow: 0 0.5rem 0.5rem 0 rgba(0, 0, 0, 0.247);
+  font-weight: 600;
   text-align: center;
-  width: 100%;
-  padding: 14px 20px;
-  margin: 20px 0;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
+  border-radius: 0.5rem;
 }
 
-.page-header :hover {
-  background-color: rgb(89, 57, 170);
-}
-
-.page-header-span {
-  font-weight: bolder;
+.page-header span {
+  font-weight: 400;
+  font-size: 0.9rem;
 }
 
 form {
-  width: 100%;
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 20px;
+  background: white;
+  box-shadow: 0 0.5rem 0.5rem 0 rgba(0, 0, 0, 0.247);
+  padding: 1.5rem;
+  border-radius: 0.5rem;
+  margin-bottom: 3rem;
 }
 
-input[type='text'] {
+.infield {
+  position: relative;
+  margin-bottom: 1rem;
+}
+
+input {
+  width: 100%;
+  height: 3rem;
+  border: 1px solid rgba(128, 128, 128, 0.425);
+  border-radius: 0.3rem;
+  padding-left: 1rem;
+}
+.infield.error input,
+.infield.empty-mail input {
+  border: 1px solid hsl(0, 100%, 74%);
+}
+input:active,
+input:focus {
+  border: 1px solid hsl(247, 40%, 68%);
+  outline: none;
+}
+::placeholder {
+  color: hsl(249, 10%, 26%);
+  font-weight: 600;
+}
+.infield.error ::placeholder,
+.infield.empty-mail ::placeholder {
+  color: hsl(0, 100%, 74%);
+}
+.error-image {
+  display: none;
+  position: absolute;
+  top: 0.8rem;
+  right: 1rem;
+}
+.infield.error .error-image,
+.infield.empty-mail .error-image {
+  display: block;
+}
+.error-text {
+  display: none;
+  color: hsl(0, 100%, 74%);
+  font-size: 0.7rem;
+  font-style: italic;
+  text-align: right;
+  margin: 0.3rem 0;
+}
+.infield.error .error-text {
+  display: block;
+}
+.error-email {
+  display: none;
+  color: hsl(0, 100%, 74%);
+  font-size: 0.7rem;
+  font-style: italic;
+  text-align: right;
+  margin: 0.3rem 0;
+}
+.infield.empty-mail .error-email {
+  display: block;
+}
+form button {
+  width: 100%;
+  height: 3.3rem;
+  border: none;
+  border-radius: 0.3rem;
+  font-size: 1rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: white;
+  background: hsl(154, 59%, 51%);
+  box-shadow: 0 5px 0 0 hsl(154, 51%, 48%);
+  cursor: pointer;
+}
+form button:hover {
+  opacity: 0.8;
+}
+.page-header {
+  font-size: 0.7rem;
+  font-weight: 500;
+  color: hsl(246, 25%, 77%);
+  margin: 1rem;
+  text-align: center;
+}
+.page-header a {
+  font-weight: 700;
+  text-decoration: none;
+  color: hsl(0, 100%, 74%);
+}
+
+/* input[type='text'] {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -84,4 +181,182 @@ input:focus-within {
 
 .terms {
   color: rgb(218, 116, 116);
+} */
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+body {
+  min-height: 100vh;
+  color: white;
+  background: url(./images/bg-intro-mobile.png) no-repeat, rgb(218, 116, 116);
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 1rem;
+}
+main {
+  margin: 4rem 1.5rem 0 1.5rem;
+}
+#text h1 {
+  font-size: 1.8rem;
+  line-height: 1.3;
+  margin-bottom: 1.5rem;
+}
+#text p {
+  margin: 1rem 0;
+}
+.trial {
+  margin: 2rem 0;
+  padding: 1rem 3rem;
+  background: rgb(89, 57, 170);
+  box-shadow: 0 0.5rem 0.5rem 0 rgba(0, 0, 0, 0.247);
+  font-weight: 600;
+  text-align: center;
+  border-radius: 0.5rem;
+}
+.trial span {
+  font-weight: 400;
+  font-size: 0.9rem;
+}
+form {
+  background: white;
+  box-shadow: 0 0.5rem 0.5rem 0 rgba(0, 0, 0, 0.247);
+  padding: 1.5rem;
+  border-radius: 0.5rem;
+  margin-bottom: 3rem;
+}
+.infield {
+  position: relative;
+  margin-bottom: 1rem;
+}
+input {
+  width: 100%;
+  height: 3rem;
+  border: 1px solid rgba(128, 128, 128, 0.425);
+  border-radius: 0.3rem;
+  padding-left: 1rem;
+}
+.infield.error input,
+.infield.empty-mail input {
+  border: 1px solid rgb(218, 116, 116);
+}
+input:active,
+input:focus {
+  border: 1px solid rgb(89, 57, 170);
+  outline: none;
+}
+::placeholder {
+  color: hsl(246, 25%, 77%);
+  font-weight: 600;
+}
+.infield.error ::placeholder,
+.infield.empty-mail ::placeholder {
+  color: rgb(218, 116, 116);
+}
+.error-image {
+  display: none;
+  position: absolute;
+  top: 0.8rem;
+  right: 1rem;
+}
+.infield.error .error-image,
+.infield.empty-mail .error-image {
+  display: block;
+}
+.error-text {
+  display: none;
+  color: rgb(218, 116, 116);
+  font-size: 0.7rem;
+  font-style: italic;
+  text-align: right;
+  margin: 0.3rem 0;
+}
+.infield.error .error-text {
+  display: block;
+}
+.error-email {
+  display: none;
+  color: rgb(218, 116, 116);
+  font-size: 0.7rem;
+  font-style: italic;
+  text-align: right;
+  margin: 0.3rem 0;
+}
+.infield.empty-mail .error-email {
+  display: block;
+}
+form button {
+  width: 100%;
+  height: 3.3rem;
+  border: none;
+  border-radius: 0.3rem;
+  font-size: 1rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: white;
+  background: #6fd574;
+  box-shadow: 0 5px 0 0 #a6eda9;
+  cursor: pointer;
+}
+form button:hover {
+  opacity: 0.8;
+}
+#terms {
+  font-size: 0.7rem;
+  font-weight: 500;
+  color: hsl(246, 25%, 77%);
+  margin: 1rem;
+  text-align: center;
+}
+#terms a {
+  font-weight: 700;
+  text-decoration: none;
+  color: rgb(218, 116, 116);
+}
+@media (min-width: 750px) {
+  body {
+    background: url(./images/bg-intro-desktop.png) no-repeat, rgb(218, 116, 116);
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    font-size: 1.125rem;
+  }
+  main {
+    max-width: 1200px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 5rem;
+    align-items: center;
+    text-align: left;
+    margin: 3rem;
+    margin-bottom: 0;
+  }
+  #text h1 {
+    font-size: 1.8rem;
+  }
+  .trial {
+    padding: 1.5rem 3rem;
+  }
+  form {
+    padding: 2.5rem;
+  }
+  .infield {
+    margin-bottom: 1.5rem;
+  }
+}
+@media (min-width: 769px) {
+  #text h1 {
+    font-size: 3rem;
+  }
 }
