--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
-body {
+.main-page {
   background: url(./images/bg-intro-mobile.png) no-repeat, rgb(218, 116, 116);
   display: flex;
   flex-direction: column;
@@ -140,7 +140,7 @@ form button:hover {
   color: rgb(218, 116, 116);
 }
 @media (min-width: 750px) {
-  body {
+  .main-page {
     background: url(./images/bg-intro-desktop.png) no-repeat, rgb(218, 116, 116);
     background-attachment: fixed;
     background-position: center;
