--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
-.main-page {
+.main-body {
   background: url(./images/bg-intro-mobile.png) no-repeat, rgb(218, 116, 116);
   display: flex;
   flex-direction: column;
@@ -20,7 +20,7 @@
   text-align: center;
   font-size: 1rem;
 }
-main {
+.main-page {
   margin: 4rem 1.5rem 0 1.5rem;
 }
 #text h1 {
@@ -140,14 +140,14 @@ form button:hover {
   color: rgb(218, 116, 116);
 }
 @media (min-width: 750px) {
-  .main-page {
+  .main-body {
     background: url(./images/bg-intro-desktop.png) no-repeat, rgb(218, 116, 116);
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
     font-size: 1.125rem;
   }
-  main {
+  .main-page {
     max-width: 1200px;
     display: grid;
     grid-template-columns: 1fr 1fr;
