--- a/styles.css
+++ b/styles.css
@@ -23,12 +23,12 @@
 .main-page {
   margin: 4rem 1.5rem 0 1.5rem;
 }
-#text h1 {
+.text-section h1 {
   font-size: 1.8rem;
   line-height: 1.3;
   margin-bottom: 1.5rem;
 }
-#text p {
+.text-section p {
   margin: 1rem 0;
 }
 .trial {
@@ -157,7 +157,7 @@ form button:hover {
     margin: 3rem;
     margin-bottom: 0;
   }
-  #text h1 {
+  .text-section h1 {
     font-size: 1.8rem;
   }
   .trial {
@@ -171,7 +171,7 @@ form button:hover {
   }
 }
 @media (min-width: 769px) {
-  #text h1 {
+  .text-section h1 {
     font-size: 3rem;
   }
 }
