--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
-
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
 }
 .main-body {
   background: url(./images/bg-intro-mobile.png) no-repeat, rgb(218, 116, 116);
@@ -18,7 +16,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  font-size: 1rem;
+  font-size: 1.5rem;
 }
 .main-page {
   margin: 4rem 1.5rem 0 1.5rem;
