--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
 .main-body {
   background: url(./images/bg-intro-mobile.png) no-repeat, rgb(218, 116, 116);
@@ -15,7 +16,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 3rem;
 }
 .main-page {
   margin: 4rem 1.5rem 0 1.5rem;
