--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
   font-family: 'Poppins', sans-serif;
 }
 .main-body {
-  background: url(./images/bg-intro-des.png) no-repeat, hsl(0, 100%, 74%);
+  background: url(./images/bg-intro-desktop.png) no-repeat, hsl(0, 100%, 74%);
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -81,7 +81,7 @@ input:focus {
 .error-image {
   display: none;
   position: absolute;
-  top: 0.8rem;
+  top: 1.8rem;
   right: 1rem;
 }
 .infield.error .error-image,
@@ -102,11 +102,12 @@ input:focus {
 .error-email {
   display: none;
   color: hsl(0, 100%, 74%);
-  font-size: 0.7rem;
-  font-style: italic;
-  text-align: right;
-  margin: 0.3rem 0;
+  font-size: 0.8rem;
+  position: absolute;
+  top: 1.8rem;
+  left: 1.4rem;
 }
+
 .infield.empty-mail .error-email {
   display: block;
 }
